# nebula_wallpaper_manager

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/FileLine/: index.tsx  style.css
src/components/ImageDisplay/: ImageDisplay.tsx  style.css
src/components/Switch/: index.tsx  style.css
src/components/icons/: FolderIcon.tsx  ImageFile.tsx  MinusIcon.tsx  PlusIcon.tsx
src/pages/images/: index.tsx  style.css
src/pages/settings/: index.tsx  style.css
src/types/: types.ts
src/utils/: find_currently_active_image.ts
