[package]
name = "tauri_teste"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "dialog-all", "protocol-asset", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "4.0.0"
rand = "0.8"
winapi = { version = "0.3", features = ["winuser"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
